--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,431 @@
+:root {
+    --font-family: 'Raleway', sans-serif;
+    --font-size: 16px;
+    --font-weight: 400;
+    --line-height: 1.174rem;
+    --primary: #000000;
+    --secondary: #0065fc;
+    --secondary-light: #deebff;
+    --grey: #d9d9d9;
+    --bg-grey: #f2f2f2;
+    --border-radius: 20px;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    max-width: 1400px;
+    margin: 0 auto;
+    font-family: var(--font-family);
+    font-size: var(--font-size);
+    font-weight: var(--font-weight);
+    line-height: var(--line-height);
+    color: var(--primary);
+    background-color: #ffffff;
+}
+
+h1, h2 {
+    font-size: 1.375rem;
+    font-weight: 700;
+    line-height: 1.614rem;
+}
+
+h3 {
+    font-size: 1.125rem;
+    font-weight: 700;
+    line-height: 1.321rem;
+}
+
+h4 {
+    font-size: 1rem;
+    font-weight: 700;
+    line-height: 1.174rem;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    padding: 4rem 0;
+}
+
+.logo {
+    width: auto;
+    height: 19px;
+}
+
+.navbar-nav {
+    display: flex;
+    justify-content: space-around;
+}
+
+.nav__link {
+    font-weight: 500;
+    color: var(--primary);
+    padding: 0 1rem;
+    position: relative;
+}
+
+.nav__link:hover {
+    color: var(--secondary);
+}
+
+.nav__link::after {
+    content: "";
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    top: -4rem;
+    left: 0;
+    background-color: var(--secondary);
+    transition: opacity ease-in-out .3s;
+    opacity: 0;
+}
+
+.nav__link:hover::after {
+    opacity: 1;
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+}
+
+#search-bar {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+#search-bar h1 {
+    margin-bottom: 8px;
+}
+
+#search-bar form {
+    display: flex;
+    margin: 2rem 0;
+}
+
+.form__label {
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--bg-grey);
+    border-radius: 15px 0 0 15px;
+}
+
+#form__input {
+    width: 332px;
+    padding: 0 1rem;
+    color: var(--primary);
+    font-size: 1.125rem;
+    font-weight: 700;
+    border: 2px solid var(--bg-grey);
+    caret-color: var(--secondary);
+    cursor: text;
+}
+
+#form__input:focus-visible {
+    outline: none;
+    border: 2px solid var(--secondary);
+}
+
+#form__input::placeholder {
+    color: var(--primary);
+    font-size: 1.125rem;
+    font-weight: 700;
+}
+
+#search-bar button[type="submit"] {
+    display: flex;
+    align-items: center;
+    padding: 15px 16px;
+    gap: 10px;
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 1.125rem;
+    line-height: 1.313rem;
+    background-color: var(--secondary);
+    border: 2px solid var(--secondary);
+    border-radius: 0 15px 15px 0;
+    cursor: pointer;
+    user-select: none;
+}
+
+#search-bar button[type="submit"] i {
+    display: none;
+}
+
+#filters {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+}
+
+#filters h2 {
+    font-size: 1.125rem;
+    margin-bottom: 0;
+    margin-right: 2rem;
+}
+
+#filters p {
+    display: flex;
+    align-items: center;
+    flex: 1 0 100%;
+    margin: 2rem 0;
+}
+
+.fa-info {
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 11px;
+    color: var(--secondary);
+    font-size: 0.75rem;
+    border: 1px solid var(--grey);
+    border-radius: 50%;
+}
+
+.list {
+    width: 914px;
+    display: flex;
+    align-items: center;
+    border: none;
+    user-select: none;
+}
+
+.list--col {
+    width: auto;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.list__item {
+    margin-right: 2rem;
+}
+
+.btn {
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    font-size: 1.063rem;
+    font-weight: 700;
+    background-color: #ffffff;
+    border: 2px solid var(--grey);
+    border-radius: 20px;
+    cursor: pointer;
+    user-select: none;
+    transition: background-color ease-in-out .3s;
+}
+
+.btn i {
+    color: var(--secondary);
+}
+
+.btn:hover {
+    background-color: var(--secondary-light);
+    transition: background-color ease-in-out .3s;
+}
+
+.container {
+    width: 100%;
+    display: flex;
+    gap: 30px;
+}
+
+#accomodations {
+    width: 66%;
+    display: flex;
+    flex-flow: row wrap;
+    /* flex: 1 0 880px; */
+    justify-content: flex-start;
+    align-content: flex-start;
+    gap: 1.5rem 2rem;
+    padding: 2.625rem 2.5rem; 
+    background-color: var(--bg-grey);
+    border-radius: var(--border-radius);
+}
+
+#accomodations h2 {
+    flex: 1 0 100%;
+}
+
+#accomodations article {
+    flex: 1 0 199px;
+}
+
+#accomodations .link {
+    flex: 1 0 100%;
+    color: var(--primary);
+    font-size: 1.125rem;
+    font-weight: 700;
+    line-height: 1.321rem;
+    /* margin-top: 1.25rem; */
+    /* border: none; */
+    cursor: pointer;
+    user-select: none;
+}
+
+/* link hover status to be added */
+
+.card {
+    display: flex;
+    flex-direction: column;
+    flex: 1 0 199px;
+    background-color: #ffffff;
+    border-radius: var(--border-radius);
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+}
+
+.card--border {
+    border: 5px solid #ffffff;
+}
+
+.card__img {
+    width: 100%;
+    height: 124px;
+    object-fit: cover;
+    border-radius: 18px 18px 0 0;
+}
+
+.card__content {
+    display: flex;
+    flex-direction: column;
+    gap: 9px;
+    color: var(--primary);
+    padding: 0.625rem 1rem;
+}
+
+.card__content__rating {
+    display: flex;
+    gap: 2px;
+}
+
+.card__content__rating i {
+    font-size: 0.75rem;
+    color: var(--bg-grey);
+}
+
+.card__content__rating i.star--blue {
+    color: var(--secondary);
+}
+
+#most-popular {
+    width: 33%;
+    display: flex;
+    flex-direction: column;
+    /* flex: 1 0 420px; */
+    gap: 0;
+    padding: 2.625rem 2.5rem; 
+    background-color: var(--bg-grey);
+    border-radius: var(--border-radius);
+}
+
+#most-popular h2 {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1.5rem;
+}
+
+#most-popular h2 > i {
+    color: var(--secondary);
+}
+
+#most-popular article:not(:last-child) {
+    margin-bottom: 2rem;
+}
+
+#most-popular .card {
+    height: 144px;
+    flex-direction: row;
+}
+
+#most-popular .card__img {
+    width: 137px;
+    height: 100%;
+    border-radius: 18px 0 0 18px;
+}
+
+#most-popular .card__content {
+    gap: 0;
+}
+
+#most-popular .card__content h3 {
+    margin-bottom: 7px;
+}
+
+#most-popular .card__content__rating {
+    flex: 1 1 auto;
+    align-items: flex-end;
+}
+
+#activities {
+    display: flex;
+    flex-flow: row wrap;
+    flex: 1 0 100%;
+    justify-content: flex-start;
+    align-content: flex-start;
+    gap: 1.5rem 2rem;
+    margin: 3.75rem 0;
+}
+
+#activities h2 {
+    flex: 1 0 100%;
+}
+
+#activities .wrapper {
+    flex: 1 0 302px;
+}
+
+#activities .card__img {
+    width: 100%;
+    height: 389px;
+}
+
+#activities .card__content {
+    font-weight: 700;
+    padding: 1.25rem;
+}
+
+footer {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 2.813rem 4.375rem;
+    background-color: var(--bg-grey);
+}
+
+.col {
+    flex: 0 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.col h4 {
+    margin-bottom: 20px;
+}
+
+.col .list {
+    gap: 12px;
+}
+
+.col .list .list__item__link {
+    color: var(--primary);
 }
