styles.css updated: fixing desktop version in progress

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ h1, h2 {
 }
 
 h3 {
-    font-size: 1.125rem;
+    font-size: 1rem;
     font-weight: 700;
     line-height: 1.321rem;
 }
@@ -246,32 +246,38 @@ main {
 .container {
     width: 100%;
     display: flex;
-    gap: 30px;
+    justify-content: space-between;
 }
 
 #accomodations {
-    width: 66%;
+    width: 60%;
     display: flex;
     flex-flow: row wrap;
-    /* flex: 1 0 880px; */
-    justify-content: flex-start;
-    align-content: flex-start;
-    gap: 1.5rem 2rem;
+    justify-content: space-between;
+    row-gap: 2rem;
     padding: 2.625rem 2.5rem; 
     background-color: var(--bg-grey);
     border-radius: var(--border-radius);
 }
 
 #accomodations h2 {
-    flex: 1 0 100%;
+    width: 100%;
 }
 
 #accomodations article {
-    flex: 1 0 199px;
+    width: 30%;
+    height: max-content;
+}
+
+#accomodations .card__img {
+    width: 100%;
+    height: 124px;
+    object-fit: cover;
+    border-radius: 18px 18px 0 0;
 }
 
 #accomodations .link {
-    flex: 1 0 100%;
+    width: 100%;
     color: var(--primary);
     font-size: 1.125rem;
     font-weight: 700;
@@ -282,12 +288,50 @@ main {
     user-select: none;
 }
 
-/* link hover status to be added */
+#most-popular {
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding: 2.625rem 2.5rem; 
+    background-color: var(--bg-grey);
+    border-radius: var(--border-radius);
+}
+
+#most-popular h2 {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+#most-popular h2 > i {
+    color: var(--secondary);
+}
+
+#most-popular article {
+    width: 100%;
+    height: 144px;
+}
+
+#most-popular .card {
+    height: 100%;
+    flex-direction: row;
+}
+
+#most-popular .card__img {
+    width: 100px;
+    border-radius: 18px 0 0 18px;
+}
+
+#most-popular .card__content__rating {
+    flex: 1 1 auto;
+    align-items: flex-end;
+}
 
 .card {
     display: flex;
     flex-direction: column;
-    flex: 1 0 199px;
+    font-size: 0.875rem;
     background-color: #ffffff;
     border-radius: var(--border-radius);
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
@@ -295,13 +339,6 @@ main {
 
 .card--border {
     border: 5px solid #ffffff;
-}
-
-.card__img {
-    width: 100%;
-    height: 124px;
-    object-fit: cover;
-    border-radius: 18px 18px 0 0;
 }
 
 .card__content {
@@ -326,81 +363,34 @@ main {
     color: var(--secondary);
 }
 
-#most-popular {
-    width: 33%;
-    display: flex;
-    flex-direction: column;
-    /* flex: 1 0 420px; */
-    gap: 0;
-    padding: 2.625rem 2.5rem; 
-    background-color: var(--bg-grey);
-    border-radius: var(--border-radius);
-}
-
-#most-popular h2 {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 1.5rem;
-}
-
-#most-popular h2 > i {
-    color: var(--secondary);
-}
-
-#most-popular article:not(:last-child) {
-    margin-bottom: 2rem;
-}
-
-#most-popular .card {
-    height: 144px;
-    flex-direction: row;
-}
-
-#most-popular .card__img {
-    width: 137px;
-    height: 100%;
-    border-radius: 18px 0 0 18px;
-}
-
-#most-popular .card__content {
-    gap: 0;
-}
-
-#most-popular .card__content h3 {
-    margin-bottom: 7px;
-}
-
-#most-popular .card__content__rating {
-    flex: 1 1 auto;
-    align-items: flex-end;
-}
-
 #activities {
+    width: 100%;
     display: flex;
     flex-flow: row wrap;
-    flex: 1 0 100%;
-    justify-content: flex-start;
-    align-content: flex-start;
-    gap: 1.5rem 2rem;
+    justify-content: space-between;
     margin: 3.75rem 0;
 }
 
 #activities h2 {
-    flex: 1 0 100%;
+    width: 100%;
+    margin-bottom: 2.625rem;
 }
 
 #activities .wrapper {
-    flex: 1 0 302px;
+    width: 22%;
+    max-width: 302px;
 }
 
 #activities .card__img {
     width: 100%;
     height: 389px;
+    border-radius: 20px 20px 0 0;
 }
 
 #activities .card__content {
+    height: 56px;
+    justify-content: center;
     font-weight: 700;
-    padding: 1.25rem;
 }
 
 footer {
