--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,47 @@
+/*
+ ******************************************
+    [Project]    Booki
+
+    [Table of contents] 
+
+    Variables
+    Resets
+    Global Styles
+    Utilities
+    Header
+    -- .navbar
+    Main
+    -- Section #search-bar
+    -- Section #filters
+    -- Section #accomodations
+    -- Aside #most-popular
+    -- Section #activities
+    Footer
+    Media Queries
+    -- Tablet
+    -- -- Tablet Header
+    -- -- Tablet Main
+    -- -- -- Tablet Section #filters
+    -- -- -- Tablet Section #accomodations
+    -- -- -- Tablet Aside #most-popular
+    -- -- -- Tablet Section #activities
+    -- -- -- Tablet Footer
+    -- Mobile
+    -- -- Mobile Reset
+    -- -- Mobile Header
+    -- -- -- Mobile .navbar
+    -- -- Mobile Main
+    -- -- -- Mobile Section #search-bar
+    -- -- -- Mobile Section #filters
+    -- -- -- Mobile Section #accomodations
+    -- -- -- Mobile Aside #most-popular
+    -- -- -- Mobile Section #activities
+    -- -- -- Mobile Footer
+
+ ******************************************
+*/
+
+/* Variables */
 :root {
     --font-family: 'Raleway', sans-serif;
     --font-size: 16px;
@@ -11,6 +55,7 @@
     --border-radius: 20px;
 }
 
+/* Resets */
 * {
     margin: 0;
     padding: 0;
@@ -18,8 +63,7 @@
 }
 
 body {
-    /* max-width: 1400px;
-    margin: 0 auto; */
+    margin: 0 2rem;
     font-family: var(--font-family);
     font-size: var(--font-size);
     font-weight: var(--font-weight);
@@ -28,6 +72,7 @@ body {
     background-color: #ffffff;
 }
 
+/* Global Styles */
 h1, h2 {
     font-size: 1.375rem;
     font-weight: 700;
@@ -54,177 +99,7 @@ a {
     text-decoration: none;
 }
 
-header {
-    /* width: 100%; */
-    max-width: 1400px;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    padding: 4rem 2rem;
-}
-
-.logo {
-    width: auto;
-    height: 19px;
-}
-
-.navbar-nav {
-    display: flex;
-    justify-content: space-around;
-}
-
-.nav__link {
-    font-weight: 500;
-    color: var(--primary);
-    padding: 0 1rem;
-    position: relative;
-}
-
-.nav__link:hover {
-    color: var(--secondary);
-}
-
-.nav__link::after {
-    content: "";
-    width: 100%;
-    height: 2px;
-    position: absolute;
-    top: -4rem;
-    left: 0;
-    background-color: var(--secondary);
-    transition: opacity ease-in-out .3s;
-    opacity: 0;
-}
-
-.nav__link:hover::after {
-    opacity: 1;
-}
-
-main {
-    max-width: 1400px;
-    margin: auto;
-    padding: 0 2rem;
-    display: flex;
-    flex-direction: column;
-}
-
-#search-bar {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-}
-
-#search-bar h1 {
-    margin-bottom: 8px;
-}
-
-#search-bar form {
-    display: flex;
-    margin: 2rem 0;
-}
-
-.form__label {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1rem;
-    background-color: var(--bg-grey);
-    border-radius: 15px 0 0 15px;
-}
-
-#form__input {
-    width: 332px;
-    padding: 0 1rem;
-    color: var(--primary);
-    font-size: 1.125rem;
-    font-weight: 700;
-    border: 2px solid var(--bg-grey);
-    caret-color: var(--secondary);
-    cursor: text;
-}
-
-#form__input:focus-visible {
-    outline: none;
-    border: 2px solid var(--secondary);
-}
-
-#form__input::placeholder {
-    color: var(--primary);
-    font-size: 1.125rem;
-    font-weight: 700;
-}
-
-#search-bar button[type="submit"] {
-    display: flex;
-    align-items: center;
-    padding: 1rem;
-    gap: 10px;
-    color: #ffffff;
-    font-weight: 700;
-    font-size: 1.125rem;
-    line-height: 1.313rem;
-    background-color: var(--secondary);
-    border: 2px solid var(--secondary);
-    border-radius: 0 15px 15px 0;
-    cursor: pointer;
-    user-select: none;
-}
-
-#search-bar button[type="submit"] i {
-    display: none;
-}
-
-#filters {
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-}
-
-#filters h2 {
-    font-size: 1.125rem;
-    margin-bottom: 0;
-    margin-right: 2rem;
-}
-
-#filters p {
-    display: flex;
-    align-items: center;
-    flex: 1 0 100%;
-    margin: 2rem 0;
-}
-
-.fa-info {
-    width: 24px;
-    height: 24px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 11px;
-    color: var(--secondary);
-    font-size: 0.75rem;
-    border: 1px solid var(--grey);
-    border-radius: 50%;
-}
-
-.list {
-    display: flex;
-    align-items: center;
-    border: none;
-    user-select: none;
-}
-
-.list--col {
-    width: auto;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-.list__item {
-    margin-right: 2rem;
-}
-
+/* Utilities */
 .btn {
     display: inline-block;
     padding: 0.5rem 1rem;
@@ -280,7 +155,6 @@ main {
     display: flex;
     gap: 2px;
     margin-top: 0.25rem;
-    /* margin-top: auto; */
 }
 
 .card__content__rating i {
@@ -292,6 +166,188 @@ main {
     color: var(--secondary);
 }
 
+/* Header */
+header {
+    max-width: 1400px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    padding: 4rem 0;
+}
+
+.logo {
+    width: auto;
+    height: 19px;
+    cursor: pointer;
+}
+
+/* Navbar */
+.navbar {
+    flex-basis : 305px;
+}
+
+.navbar-nav {
+    display: flex;
+    justify-content: space-around;
+}
+
+.nav__link {
+    font-weight: 500;
+    color: var(--primary);
+    padding: 2rem;
+    position: relative;
+}
+
+.nav__link:hover {
+    color: var(--secondary);
+}
+
+.nav__link::after {
+    content: "";
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    top: -2rem;
+    left: 0;
+    background-color: var(--secondary);
+    transition: opacity ease-in-out .3s;
+    opacity: 0;
+}
+
+.nav__link:hover::after {
+    opacity: 1;
+}
+
+/* Main */
+main {
+    max-width: 1400px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+}
+
+/* Section #search-bar */
+#search-bar {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+#search-bar h1 {
+    margin-bottom: 8px;
+}
+
+#search-bar form {
+    height: 50px;
+    display: flex;
+    margin: 2rem 0;
+}
+
+.form__label {
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    background-color: var(--bg-grey);
+    border-radius: 15px 0 0 15px;
+}
+
+#form__input {
+    width: 332px;
+    padding: 0 1rem;
+    color: var(--primary);
+    font-size: 1.125rem;
+    font-weight: 700;
+    border: 2px solid var(--bg-grey);
+    caret-color: var(--secondary);
+    cursor: text;
+}
+
+#form__input:focus-visible {
+    outline: none;
+    border: 2px solid var(--secondary);
+}
+
+#form__input::placeholder {
+    color: var(--primary);
+    font-size: 1.125rem;
+    font-weight: 700;
+}
+
+#search-bar button[type="submit"] {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 1rem;
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 1.125rem;
+    line-height: 1.313rem;
+    background-color: var(--secondary);
+    border: 2px solid var(--secondary);
+    border-radius: 0 15px 15px 0;
+    cursor: pointer;
+    user-select: none;
+}
+
+#search-bar button[type="submit"] i {
+    display: none;
+}
+
+/* Section #filters */
+#filters {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+}
+
+#filters h2 {
+    font-size: 1.125rem;
+    margin-bottom: 0;
+    margin-right: 2rem;
+}
+
+#filters p {
+    display: flex;
+    align-items: center;
+    flex: 1 0 100%;
+    margin: 2rem 0;
+}
+
+.fa-info {
+    width: 24px;
+    height: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 11px;
+    color: var(--secondary);
+    font-size: 0.75rem;
+    border: 1px solid var(--grey);
+    border-radius: 50%;
+}
+
+.list {
+    display: flex;
+    align-items: center;
+    border: none;
+    user-select: none;
+}
+
+.list--col {
+    width: auto;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.list__item {
+    margin-right: 2rem;
+}
+
+/* Section #accomodations */
 #accomodations {
     width: 62%;
     display: flex;
@@ -308,7 +364,7 @@ main {
 }
 
 #accomodations .card {
-    width: 32%;
+    flex-basis: 32%;
     max-height: 270px;
 }
 
@@ -343,6 +399,7 @@ main {
     user-select: none;
 }
 
+/* Section #most-popular */
 #most-popular {
     width: 35%;
     display: flex;
@@ -364,13 +421,15 @@ main {
 }
 
 #most-popular .card {
-    width: 100%;
+    flex-basis: 100%;
     height: 144px;
     flex-direction: row;
 }
 
 #most-popular .card__img {
     width: 40%;
+    min-width: 40%;
+    object-fit: cover;
     border-radius: 18px 0 0 18px;
 }
 
@@ -383,8 +442,8 @@ main {
     margin-top: auto;
 }
 
+/* Section #activities */
 #activities {
-    width: 100%;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
@@ -397,7 +456,7 @@ main {
 }
 
 #activities .card {
-    width: 22%;
+    flex-basis: 22%;
 }
 
 #activities .card a {
@@ -419,18 +478,16 @@ main {
     padding: 1.25rem;
 }
 
+/* Footer */
 footer {
-    width: 100%;
     display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
-    padding: 2.813rem 4.375rem;
+    padding: 2rem 4rem;
     background-color: var(--bg-grey);
 }
 
 .col {
-    /* flex: 0 0 auto; */
     display: flex;
+    flex-basis: 33.33%;
     flex-direction: column;
 }
 
@@ -446,9 +503,22 @@ footer {
     color: var(--primary);
 }
 
+/* Media Queries */
+
 /* Tablet */
 @media screen and (max-width: 992px) {
+    /* Tablet Header */
+    header {
+        padding: 3rem 0 4rem 0;
+    }
 
+    .nav__link::after {
+        top: -1rem;
+    }
+
+    /* Tablet Main */
+
+    /* Tablet Section #filters */
     #filters h2 {
         margin-right: 0.6rem;
     }
@@ -483,6 +553,7 @@ footer {
         border-width: 3px;
     }
 
+    /* Tablet Section #accomodations */
     #accomodations {
         width: 100%;
         margin-bottom: 3.313rem;
@@ -493,10 +564,10 @@ footer {
         font-size: 0.875rem;
     }
 
+    /* Tablet Aside #most-popular */
     #most-popular {
         width: 100%;
         flex-flow: row wrap;
-        font-size: 0.813rem;
         gap: 1rem;
     }
 
@@ -505,10 +576,12 @@ footer {
         flex: 1 0 auto;
     }
 
-    #most-popular .card__img {
-        width: 30%;
+    #most-popular .card__content h3,
+    #most-popular .card__content p {
+        font-size: 0.875rem;
     }
 
+    /* Tablet Section #activities */
     #activities {
         gap: 1rem;
         padding: 0;
@@ -518,22 +591,35 @@ footer {
         height: 211px;
     }
 
+    #activities .card__content {
+        justify-content: center;
+    }
+    
+    /* Tablet Footer */
     footer {
         justify-content: space-between;
+        padding: 2rem 0 2rem 4rem;
     }
 
 }
 
 /* Mobile */
 @media screen and (max-width: 768px) {
+    /* Mobile Reset */
+    body {
+        margin: 0;
+    }
+
+    /* Mobile Header */
     header {
         flex-flow: row wrap;
         padding: 1.443rem 0;
         border-bottom: 1px solid var(--bg-grey);
     }
 
+    /* Mobile .navbar */
     .navbar {
-        width: 100%;
+        flex-basis: 100%;
     }
 
     .logo {
@@ -544,11 +630,10 @@ footer {
         height: 3px;
         top: 2.5rem;
     }
-
-    main {
-        padding: 0;
-    }
     
+    /* Mobile Main */
+
+    /* Mobile Section #search-bar */
     #search-bar {
         margin: 0 1rem;
         padding-top: 2rem;
@@ -563,7 +648,7 @@ footer {
     }
 
     #form__input {
-        width: 65%;
+        width: 100%;
     }
 
     #search-bar button[type="submit"] span {
@@ -575,6 +660,7 @@ footer {
         color: #ffffff;
     }
 
+    /* Mobile Section #filters */
     #filters {
         margin: 0 1rem;
     }
@@ -586,41 +672,47 @@ footer {
     }
 
     #filters .list {
+        width: 100%;
         flex-wrap: wrap;
         row-gap: 1rem;
     }
 
     .list__item {
-        margin-right: 0.25rem;
+        flex-basis: 48%;
+    }
+
+    .list__item:nth-child(odd) {
+        margin-right: 0.75rem;
+    }
+
+    .list__item:nth-child(even) {
+        margin-right: 0;
     }
 
     .list__item .btn {
-        width: 140px;
+        width: 99%;
         display: flex;
         align-items: center;
         font-size: 0.688rem;
-        padding: 0.5rem;
+        padding: 0.75rem 0.5rem;
     }
 
     .list__item .btn i {
-        font-size: 0.875rem;
-        margin-right: 0.25rem;
+        font-size: 1rem;
+        margin-right: 0.5rem;
     }
 
     #filters p {
         width: 100%;
         text-align: justify;
-        padding-right: 0.75rem;
-        align-items: flex-start;
+        align-items: center;
     }
 
-    .fa-info {
-        width: 35px;
-    }
-
+    /* Mobile Section #accomodations */
     #accomodations {
         order: 2;
-        padding: 1.5rem 1rem;
+        margin-bottom: 0;
+        padding: 1.5rem 1rem 0 1rem;
         flex-direction: column;
         row-gap: 0.75rem;
         background-color: #ffffff;
@@ -639,6 +731,7 @@ footer {
         display: none;
     }
 
+    /* Mobile Aside #most-popular */
     #most-popular {
         order: 1;
         padding: 1.5rem 1rem;
@@ -654,6 +747,7 @@ footer {
         width: 40%;
     }
 
+    /* Mobile Section #activities */
     #activities {
         flex-direction: column;
         padding: 0 1rem;
@@ -667,8 +761,11 @@ footer {
         height: 134px;
     }
 
+    /* Mobile Footer */
     footer {
+        width: 100%;
         flex-direction: column;
+        margin: 0;
         padding-left: 1.875rem;
         padding-right: 1.875rem;
     }
