--- a/css/styles.css
+++ b/css/styles.css
@@ -251,8 +251,8 @@ main {
 }
 
 #form__input {
-    width: 332px;
-    max-width: 332px;
+    width: 282px;
+    max-width: 65%;
     padding: 0 1rem;
     color: var(--primary);
     font-size: 1.125rem;
@@ -271,6 +271,7 @@ main {
     color: var(--primary);
     font-size: 1.125rem;
     font-weight: 700;
+    opacity: 1;
 }
 
 #search-bar button[type="submit"] {
@@ -514,10 +515,6 @@ footer {
 /* 8.1 - Tablet */
 @media screen and (max-width: 992px) {
     /* 8.1.1 - Tablet Header */
-    header {
-        padding-bottom: 4rem;
-    }
-
     .nav__link::after {
         top: -1rem;
     }
@@ -659,10 +656,6 @@ footer {
         font-size: 0.938rem;
     }
 
-    #form__input {
-        width: 100%;
-    }
-
     #search-bar button[type="submit"] span {
         display: none;
     }
@@ -708,8 +701,8 @@ footer {
         width: 99%;
         display: flex;
         align-items: center;
-        font-size: 0.688rem;
-        padding: 0.75rem 0.5rem;
+        font-size: 0.67rem;
+        padding: 0.75rem 0 0.75rem 0.5rem;
     }
 
     .list__item .btn i {
