--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,7 @@ a {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-items: stretch;
 }
 
 .card {
@@ -426,7 +427,6 @@ main {
 }
 
 #most-popular .card {
-    flex-basis: 100%;
     height: 144px;
     flex-direction: row;
 }
@@ -439,8 +439,14 @@ main {
 }
 
 #most-popular .card__content {
+    width: 100%;
     display: flex;
     flex-direction: column;
+    padding: 0.5rem 1.375rem;
+}
+
+#most-popular .card__content h3 {
+    max-width: 169px;
 }
 
 #most-popular .card__content__rating {
@@ -577,6 +583,10 @@ footer {
     #most-popular .card {
         width: 30%;
         flex: 1 0 auto;
+    }
+
+    #most-popular .card__content {
+        padding: 0.5rem;
     }
 
     #most-popular .card__content h3,
@@ -757,6 +767,10 @@ footer {
 
     #most-popular .card__img {
         width: 40%;
+    }
+
+    #most-popular .card__content {
+        padding: 0.5rem 1.375rem;
     }
 
     /* 8.2.3.5 - Mobile Section #activities */
